--- a/workspace-github-repos.yml
+++ b/workspace-github-repos.yml
@@ -1,111 +1,111 @@
 ---
 repos:
-  - { workspace: '{{ playbook_dir }}/..', repo: local-workspace-maintenance }
-  - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-installation-aio }
-  - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-installation-baas }
-  - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-installation-portal }
-  - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-installation-microgateway }
-  - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-installation-mirror }
-  - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-installation-monetization }
-  - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-installation-single-region }
-  - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-installation-third-region }
-  - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-installation-two-regions }
-  - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-aws-management }
-  - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-backup }
-  - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-cassandra }
-  - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-cassandra-validation }
-  - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-cassandra-replication-factor }
-  - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-cassandra-recover-deadnode }
-  - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-expand-region }
-  - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-opdk-upgrade }
-  - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-opdk-upgrade-mirror }
-  - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-postgres-add-remove }
-  - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-postgres-update-standby }
-  - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-qpid-add-remove }
-  - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-update-message-processor-properties }
-  - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-vagrant }
-  - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-validate-port-availability }
-  - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-samples }
-  - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-cs-edge-upgrade }
-  - { workspace: '{{ role_workspace }}', repo: apigee-fetch-files }
-  - { workspace: '{{ role_workspace }}', repo: apigee-internal-port-connectivity-validator-cassandra }
-  - { workspace: '{{ role_workspace }}', repo: apigee-internal-port-connectivity-validator-ldap }
-  - { workspace: '{{ role_workspace }}', repo: apigee-internal-port-connectivity-validator-mp }
-  - { workspace: '{{ role_workspace }}', repo: apigee-internal-port-connectivity-validator-ms }
-  - { workspace: '{{ role_workspace }}', repo: apigee-internal-port-connectivity-validator-postgres }
-  - { workspace: '{{ role_workspace }}', repo: apigee-internal-port-connectivity-validator-qpid }
-  - { workspace: '{{ role_workspace }}', repo: apigee-internal-port-connectivity-validator-router }
-  - { workspace: '{{ role_workspace }}', repo: apigee-internal-port-connectivity-validator-ui }
-  - { workspace: '{{ role_workspace }}', repo: apigee-internal-port-connectivity-validator-zookeeper }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-aws-create }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-aws-security-group }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-aws-setup }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-aws-terminate }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-baas-create-org-and-user }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-baas-silent-installation-config }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-baas-cassandra-cron-flush }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-backup }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-cache-update }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-cassandra-client-update }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-cassandra-rebuild }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-cassandra-repair }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-cassandra-change-replication-factor }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-cassandra-consistency-level-modifier }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-cassandra-consistency-level-management-server }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-cassandra-change-quorum }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-cassandra-shutdown-preparation }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-cassandra-deadnode-recover-complete }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-cassandra-deadnode-recover-config }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-cwc-update }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-haproxy-rmp }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-enable-swap }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-portal-os-config }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-portal-silent-installation-config }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-restore }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-server-restart }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-server-self }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-set-reachable }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-analytics-group-add }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-apigee-user }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-bootstrap }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-bootstrap-archive-installer }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-bootstrap-create-archive }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-bootstrap-download-archive }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-bootstrap-rollback }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-bootstrap-upload-archive }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-component }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-component-installer }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-default-settings }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-message-processor-bind-environment }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-openjdk }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-java-home }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-org }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-org-config }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-os-common }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-os-limits }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-os-minimum }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-os-postgres }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-postgres-config }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-postgres-master }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-postgres-db-upgrade }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-postgres-standby }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-postgresql-add }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-postgresql-remove }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-provisioning }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-qpid-add }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-qpid-remove }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-selinux-disable }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-silent-installation-config }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-status }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-validate }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-validate-cleanup }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-shutdown-iptables }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-ssh-user}
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-iptables-flush }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-iptables-port-block }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-start-components }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-stop-components }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-time-sync }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-update-component }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-validate-external-port-connectivity-client }
-  - { workspace: '{{ role_workspace }}', repo: apigee-opdk-validate-external-port-connectivity-server }
+  - { workspace: '{{ playbook_dir }}/..', repo_name: local-workspace-maintenance }
+  - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-aio }
+  - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-baas }
+  - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-portal }
+  - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-microgateway }
+  - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-mirror }
+  - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-monetization }
+  - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-single-region }
+  - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-third-region }
+  - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-installation-two-regions }
+  - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-aws-management }
+  - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-backup }
+  - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-cassandra }
+  - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-cassandra-validation }
+  - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-cassandra-replication-factor }
+  - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-cassandra-recover-deadnode }
+  - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-expand-region }
+  - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-opdk-upgrade }
+  - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-opdk-upgrade-mirror }
+  - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-postgres-add-remove }
+  - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-postgres-update-standby }
+  - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-qpid-add-remove }
+  - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-update-message-processor-properties }
+  - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-vagrant }
+  - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-maintenance-validate-port-availability }
+  - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-playbook-samples }
+  - { workspace: '{{ playbook_workspace }}', repo_name: apigee-opdk-cs-edge-upgrade }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-fetch-files }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-internal-port-connectivity-validator-cassandra }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-internal-port-connectivity-validator-ldap }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-internal-port-connectivity-validator-mp }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-internal-port-connectivity-validator-ms }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-internal-port-connectivity-validator-postgres }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-internal-port-connectivity-validator-qpid }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-internal-port-connectivity-validator-router }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-internal-port-connectivity-validator-ui }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-internal-port-connectivity-validator-zookeeper }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-aws-create }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-aws-security-group }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-aws-setup }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-aws-terminate }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-baas-create-org-and-user }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-baas-silent-installation-config }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-baas-cassandra-cron-flush }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-backup }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-cache-update }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-cassandra-client-update }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-cassandra-rebuild }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-cassandra-repair }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-cassandra-change-replication-factor }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-cassandra-consistency-level-modifier }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-cassandra-consistency-level-management-server }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-cassandra-change-quorum }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-cassandra-shutdown-preparation }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-cassandra-deadnode-recover-complete }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-cassandra-deadnode-recover-config }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-cwc-update }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-haproxy-rmp }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-enable-swap }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-portal-os-config }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-portal-silent-installation-config }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-restore }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-server-restart }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-server-self }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-set-reachable }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-analytics-group-add }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-apigee-user }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-bootstrap }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-bootstrap-archive-installer }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-bootstrap-create-archive }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-bootstrap-download-archive }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-bootstrap-rollback }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-bootstrap-upload-archive }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-component }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-component-installer }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-default-settings }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-message-processor-bind-environment }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-openjdk }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-java-home }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-org }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-org-config }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-os-common }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-os-limits }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-os-minimum }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-os-postgres }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-postgres-config }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-postgres-master }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-postgres-db-upgrade }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-postgres-standby }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-postgresql-add }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-postgresql-remove }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-provisioning }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-qpid-add }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-qpid-remove }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-selinux-disable }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-silent-installation-config }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-status }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-validate }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-validate-cleanup }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-shutdown-iptables }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-ssh-user}
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-iptables-flush }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-iptables-port-block }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-start-components }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-stop-components }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-time-sync }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-update-component }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-validate-external-port-connectivity-client }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-validate-external-port-connectivity-server }
