--- a/workspace-github-repos.yml
+++ b/workspace-github-repos.yml
@@ -50,19 +50,18 @@ repos:
   - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-cassandra-rebuild }
   - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-cassandra-repair }
   - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-cassandra-change-replication-factor }
-  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-cassandra-consistency-level-modifier }
-  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-cassandra-consistency-level-management-server }
-  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-cassandra-change-quorum }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-cassandra-consistencylevel-modifier }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-cassandra-consistencylevel-management-server }
   - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-cassandra-shutdown-preparation }
-  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-cassandra-deadnode-recover-complete }
-  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-cassandra-deadnode-recover-config }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-cassandra-deadnode-recovery-complete }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-cassandra-deadnode-recovery-config }
   - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-cwc-update }
   - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-haproxy-rmp }
   - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-enable-swap }
   - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-portal-os-config }
   - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-portal-silent-installation-config }
   - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-restore }
-  - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-server-restart }
+  - { workspace: '{{ role_workspace }}', repo_name: apigee-server-restart }
   - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-server-self }
   - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-set-reachable }
   - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-analytics-group-add }
