--- a/setup-base.yml
+++ b/setup-base.yml
@@ -35,7 +35,7 @@
       repo: '{{ host_repo }}/{{ item.repo_name }}.git'
       dest: "{{ item.workspace }}/{{ item.repo_name }}"
       accept_hostkey: yes
-    with_items: "{{ repos }}"
+    with_items: "{{ repo_names }}"
 
   - name: Add empty credentials.yml file to .apigee
     copy:
