--- a/bitbucket-create-repos.yml
+++ b/bitbucket-create-repos.yml
@@ -3,11 +3,11 @@
   hosts: localhost
   connection: local
   vars:
-    bitbucket_url: "https://onestash.verizon.com/rest/api/1.0/projects/CELVW/repos"
+    bitbucket_api_url: "https://onestash.verizon.com/rest/api/1.0/projects/CELVW/repos"
   tasks:
   - name: Create repositories if necessary
     uri:
-      url: "{{ bitbucket_url }}"
+      url: "{{ bitbucket_api_url }}"
       method: POST
       user: "{{ vz_windows_user }}"
       password: "{{ vz_windows_password }}"
@@ -20,3 +20,8 @@
         forkable: True
     with_items: "{{ repo_names }}"
 
+  - name: Add Onestash as remote repo
+    shell: "git remote add vz ssh://git@onestash.verizon.com:7999/celvw/{{ item.repo_name }}.git"
+    args:
+      chdir: "{{ item.workspace }}"
+    with_items: "{{ repo_names }}"
