--- a/bitbucket-create-repos.yml
+++ b/bitbucket-create-repos.yml
@@ -26,5 +26,5 @@
   - name: Add Onestash as remote repo
     shell: "git remote add vz ssh://git@onestash.verizon.com:7999/celvw/{{ item.repo_name }}.git"
     args:
-      chdir: "{{ item.workspace }}"
+      chdir: "{{ item.workspace }}/{{ item.repo_name }}"
     with_items: "{{ repo_names }}"
