Added setting permissions to bitbucket repos.

--- a/add_user_permission.yml
+++ b/add_user_permission.yml
@@ -3,7 +3,7 @@
   uri:
     url:
       url: "{{ bitbucket_api_url }}/{{ item.repo_name }}/permissions/users?{{ repo_user }}&REPO_ADMIN"
-      method: POST
+      method: PUT
       user: "{{ vz_windows_user }}"
       password: "{{ vz_windows_password }}"
       force_basic_auth: yes
