Added setting permissions to bitbucket repos.

--- a/add_user_permission.yml
+++ b/add_user_permission.yml
@@ -2,7 +2,7 @@
 - name: Add repo permission for user {{ repo_user }}
   uri:
     url:
-      url: "{{ bitbucket_api_url }}/{{ item.repo_name }}/permissions/users?{{ repo_user }}&REPO_ADMIN"
+      url: "{{ bitbucket_api_url }}/{{ item.repo_name }}/permissions/users?name={{ repo_user }}&permission=REPO_ADMIN"
       method: PUT
       user: "{{ vz_windows_user }}"
       password: "{{ vz_windows_password }}"
