--- a/workspace-folders.yml
+++ b/workspace-folders.yml
@@ -1,11 +1,11 @@
 ---
-apigee_workspace: /tmp/apigee-workspace
+apigee_workspace: ~/apigee-workspace
 ansible_config: "{{ apigee_workspace }}/ansible"
 apigee_config: "{{ apigee_workspace }}/apigee"
 playbook_workspace: "{{ apigee_workspace }}/apigee-opdk-playbook-workspace"
 role_workspace: "{{ apigee_workspace }}/apigee-opdk-role-workspace"
-# host_repo: git@github.com:carlosfrias
-host_repo: https://github.com/carlosfrias
+#host_repo: https://github.com/carlosfrias
+host_repo: ssh://git@onestash.verizon.com:7999/celvw
 configuration_folders:
 - '{{ ansible_config }}/configurations'
 - '{{ ansible_config }}/inventory'
