--- a/workspace-folders.yml
+++ b/workspace-folders.yml
@@ -1,5 +1,5 @@
 ---
-apigee_workspace: /tmp/apigee-workspace
+apigee_workspace: ~/apigee-workspace
 ansible_config: "{{ apigee_workspace }}/ansible"
 apigee_config: "{{ apigee_workspace }}/apigee"
 playbook_workspace: "{{ apigee_workspace }}/apigee-opdk-playbook-workspace"
