--- a/workspace-github-repos.yml
+++ b/workspace-github-repos.yml
@@ -99,4 +99,5 @@ repo_names:
 - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-java-home }
 - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-target-links }
 - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-ssh-user }
+- { workspace: '{{ role_workspace }}', repo_name: apigee-server-restart }
 
