--- a/setup-apigee-license.yml
+++ b/setup-apigee-license.yml
@@ -1,8 +1,8 @@
 ---
 - hosts: localhost
   connection: local
-  vars:
-    apigee_config: ~/.apigee
+  vars_files:
+  - workspace-folders.yml
 
   vars_prompt:
     - name: license_path
