--- a/workspace-github-repos.yml
+++ b/workspace-github-repos.yml
@@ -100,4 +100,5 @@ repo_names:
 - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-target-links }
 - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-ssh-user }
 - { workspace: '{{ role_workspace }}', repo_name: apigee-server-restart }
+- { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-cwc-update }
 
