--- a/bitbucket-create-update-repos.yml
+++ b/bitbucket-create-update-repos.yml
@@ -3,12 +3,9 @@
   hosts: localhost
   connection: local
   vars_files:
-  - workspace-github-repos.yml
-  - workspace-folders.yml
+  - bitbucket-workspace-github-repos.yml
+  - bitbucket-workspace-folders.yml
   - bitbucket-repo-user-list.yml
-  vars:
-    bitbucket_project_api_endpoint: "https://onestash.verizon.com/rest/api/1.0/projects/CELVW"
-    bitbucket_repo_api_endpoint: "{{ bitbucket_project_api_endpoint }}/repos"
   tasks:
   - name: Create repositories if necessary
     uri:
