--- a/setup-apigee-license.yml
+++ b/setup-apigee-license.yml
@@ -2,7 +2,7 @@
 - hosts: localhost
   connection: local
   vars_files:
-  - workspace-folders.yml
+  - bitbucket-workspace-folders.yml
   vars_prompt:
     - name: license_path
       prompt: "Enter path to license file"
