--- a/bitbucket-create-update-repos.yml
+++ b/bitbucket-create-update-repos.yml
@@ -39,6 +39,10 @@
       chdir: "{{ item.workspace }}/{{ item.repo_name }}"
     with_items: "{{ repo_names }}"
 
+  - name: Pull from Onestash if the repo is already there
+    ignore_errors: yes
+    shell: "git pull vz master"
+
   - name: Commit updated repos to onestash
     shell: "git checkout master && git push -u vz master"
     args:
