--- a/bitbucket-workspace-github-repos.yml
+++ b/bitbucket-workspace-github-repos.yml
@@ -101,4 +101,5 @@ repo_names:
 - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-ssh-user }
 - { workspace: '{{ role_workspace }}', repo_name: apigee-server-restart }
 - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-cwc-update }
+- { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-postgres-db-upgrade }
 
