--- a/bitbucket-workspace-folders.yml
+++ b/bitbucket-workspace-folders.yml
@@ -4,10 +4,12 @@ apigee_config: ~/.apigee
 apigee_workspace: ~/apigee-workspace
 playbook_workspace: "{{ apigee_workspace }}/apigee-opdk-playbook-workspace"
 role_workspace: "{{ apigee_workspace }}/apigee-opdk-role-workspace"
-#host_repo: https://github.com/carlosfrias
-host_repo: ssh://git@onestash.verizon.com:7999/celvw
-bitbucket_project_api_endpoint: "https://onestash.verizon.com/rest/api/1.0/projects/CELVW"
-bitbucket_repo_api_endpoint: "{{ bitbucket_project_api_endpoint }}/repos"
+#repository_secure_endpoint_https: https://github.com/carlosfrias
+#repository_secure_endpoint_ssh: git@github.com/carlosfrias
+repository_host: "onestash.verizon.com"
+repository_port: "7999"
+repository_secure_endpoint_ssh: "ssh://git@{{ repository_host }}:{{ repository_port }}/celvw"
+repository_secure_endpoint_https: "https://{{ repository_host }}/rest/api/1.0/projects/CELVW"
 configuration_folders:
 - '{{ ansible_config }}/configurations'
 - '{{ ansible_config }}/inventory'
