--- a/repository-custom-properties.yml
+++ b/repository-custom-properties.yml
@@ -4,12 +4,8 @@ apigee_config: ~/.apigee
 apigee_workspace: ~/apigee-workspace
 playbook_workspace: "{{ apigee_workspace }}/apigee-opdk-playbook-workspace"
 role_workspace: "{{ apigee_workspace }}/apigee-opdk-role-workspace"
-#repository_secure_endpoint_https: https://github.com/carlosfrias
-#repository_secure_endpoint_ssh: git@github.com/carlosfrias
-repository_host: "onestash.verizon.com"
-repository_port: "7999"
-repository_secure_endpoint_ssh: "ssh://git@{{ repository_host }}:{{ repository_port }}/celvw"
-repository_secure_endpoint_https: "https://{{ repository_host }}/rest/api/1.0/projects/CELVW"
+repository_secure_endpoint_https: https://github.com/carlosfrias
+repository_secure_endpoint_ssh: git@github.com/carlosfrias
 configuration_folders:
 - '{{ ansible_config }}/configurations'
 - '{{ ansible_config }}/inventory'
